maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:32: error: ':' expected but ',' found.
def aMurSud(x,y):Boolean={
             ^JediEscaper:50: error: identifier expected but '}' found.
}
^